fixed pac-man related FIXMES; the tile containers were too small

--- a/src/App/Tile/index.css
+++ b/src/App/Tile/index.css
@@ -21,8 +21,8 @@
   display: flex;
   background-color: darkcyan;
   background-color: #001a33;
-  height: 30px;
-  width: 30px;
+  height: 35px;
+  width: 35px;
   align-items: center;
   justify-content: center;
   border: 1px lime solid;
@@ -31,64 +31,59 @@
 .wall {
   height: 30px;
   width: 30px;
-  border: tomato 1px solid;
+  /*border: tomato 1px solid;*/
   background-color: blue;
 }
 
-/*FIXME: slight black gap on down side here*/
 .player--move-up {
   height: 30px;
   width: 30px;
   border-radius: 50%;  
-  border: tomato 1px solid;
+  /*border: tomato 1px solid;*/
   /*background-color: yellow;*/
   /*background-color: yellow;*/
   background-image:
-        linear-gradient(135deg, transparent 50%, yellow 50%),
-        linear-gradient(45deg, yellow 50%, transparent 50%);
-        /*linear-gradient(135deg, transparent 50%, green 50%),
-        linear-gradient(45deg, red 50%, transparent 50%);*/
+    linear-gradient(135deg, transparent 50%, yellow 50%),
+    linear-gradient(45deg, yellow 50%, transparent 50%);
+    /*linear-gradient(135deg, transparent 50%, green 50%),
+    linear-gradient(45deg, red 50%, transparent 50%);*/
 }
 
 .player--move-down {
   height: 30px;
   width: 30px;
   border-radius: 50%;  
-  border: tomato 1px solid;
+  /*border: tomato 1px solid;*/
   /*background-color: yellow;*/
   /*background-color: yellow;*/
   background-image:
-        linear-gradient(45deg, transparent 50%, yellow 50%),
-        linear-gradient(135deg, yellow 50%, transparent 50%);
-        /*linear-gradient(45deg, transparent 50%, green 50%),
-        linear-gradient(135deg, red 50%, transparent 50%);*/
+    linear-gradient(45deg, transparent 50%, yellow 50%),
+    linear-gradient(135deg, yellow 50%, transparent 50%);
+    /*linear-gradient(45deg, transparent 50%, green 50%),
+    linear-gradient(135deg, red 50%, transparent 50%);*/
 }
 
-/*FIXME: slight black gap on right side here*/
 .player--move-left {
+  display: flex;
   height: 30px;
   width: 30px;
-  border-radius: 50%;  
-  border: tomato 1px solid;
-  /*background-color: yellow;*/
-  /*background-color: yellow;*/
+  border-radius: 50%; 
   background-image:
-        linear-gradient(135deg, transparent 50%, yellow 50%),
-        linear-gradient(225deg, yellow 50%, transparent 50%);        
-        /*linear-gradient(135deg, transparent 50%, green 50%),
-        linear-gradient(225deg, red 50%, transparent 50%);*/
+    linear-gradient(135deg, transparent 50%, yellow 50%),
+    linear-gradient(225deg, yellow 50%, transparent 50%);        
 }
 
 .player--move-right {
+  display:flex;
   height: 30px;
   width: 30px;
   border-radius: 50%;  
-  border: tomato 1px solid;
+  /*border: tomato 1px solid;*/
   /*background-color: yellow;*/
   /*background-color: yellow;*/
   background-image:
-        linear-gradient(225deg, transparent 50%, yellow 50%),
-        linear-gradient(135deg, yellow 50%, transparent 50%);        
-        /*linear-gradient(225deg, transparent 50%, green 50%),
-        linear-gradient(135deg, red 50%, transparent 50%);*/
+    linear-gradient(225deg, transparent 50%, yellow 50%),
+    linear-gradient(135deg, yellow 50%, transparent 50%);        
+    /*linear-gradient(225deg, transparent 50%, green 50%),
+    linear-gradient(135deg, red 50%, transparent 50%);*/
 }
