--- a/src/App/index.css
+++ b/src/App/index.css
@@ -1,5 +1,5 @@
 * {
-  border: red solid 1px;
+  /*border: red solid 1px;*/
 }
 
 
@@ -8,6 +8,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  /*flex-grow: 1;*/
 }
 
 .game-title {
